--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -57,7 +57,9 @@
             </tab>
             
             <tab heading='Edit Photos'>
-                <h4>Photos edit</h4>
+                <app-photo-editor [member]="member">
+
+                </app-photo-editor>
                
 
             </tab>
