--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -14,11 +14,11 @@
                 </div>
                 <div>
                     <strong>Last Active:</strong>
-                    <p>{{member.lastActive}}</p>
+                    <p>{{member.lastActive|timeago}}</p>
                 </div>
                 <div>
                     <strong>Member since:</strong>
-                    <p>{{member.created}}</p>
+                    <p>{{member.created | date:'shortDate'}}</p>
                 </div>
             </div>
             <div class="card-footer">
@@ -45,8 +45,8 @@
             </tab>
             <tab heading='Photos'>
                 <h4>Photos</h4>
-                <ngx-gallery [options]="galleryOptions" [images]="galleryImages" class="ngx-gallery" 
-                style="display: inline-block; margin-bottom: 20px;"></ngx-gallery>
+                <ngx-gallery [options]="galleryOptions" [images]="galleryImages" class="ngx-gallery"
+                    style="display: inline-block; margin-bottom: 20px;"></ngx-gallery>
 
 
             </tab>
