--- a/client/src/app/members/member-list/member-list.component.html
+++ b/client/src/app/members/member-list/member-list.component.html
@@ -26,8 +26,18 @@
         </div>
 
 
-            <button class="btn btn-primary ml-1" type="submit">Apply Filters</button>
-            <button (click)="resetFilters()" class="btn btn-info ml-1" type="submit">Reset Filters</button>
+        <button class="btn btn-primary ml-1" type="submit">Apply Filters</button>
+        <button (click)="resetFilters()" class="btn btn-info ml-1" type="submit">Reset Filters</button>
+        <div class="col">
+            <div class="btn-group float-right">
+                <button type="button" class="btn btn-primary" name='orderBy' (click)="loadMembers()"
+                    btnRadio='lastActicve' [(ngModel)]="userParams.orderby">Last Acticve</button>
+
+                <button type="button" class="btn btn-primary" name='orderBy' (click)="loadMembers()" btnRadio='created'
+                    [(ngModel)]="userParams.orderby">Newest Members</button>
+            </div>
+        </div>
+
     </form>
 </div>
 
