--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -3,19 +3,19 @@
         <img src="{{member.photoUrl||'./assets/user.png'}}" alt="{{member.knownAs}}" class="card-img-top">
         <ul class="list-inline member-icons animate text-center">
             <li class="list-inline-item" routerLink='/members/{{member.username}}'>
-                <button  class="btn btn-primary">
+                <button class="btn btn-primary">
                     <i class="fa fa-user"></i>
 
                 </button>
             </li>
             <li class="list-inline-item">
-                <button (click)="addLike(member)"class="btn btn-primary">
+                <button (click)="addLike(member)" class="btn btn-primary">
                     <i class="fa fa-heart"></i>
 
                 </button>
             </li>
             <li class="list-inline-item">
-                <button class="btn btn-primary">
+                <button routerLink="/members/{{member.username}}" [queryParams]='{tab:3}' class="btn btn-primary">
                     <i class="fa fa-envelope"></i>
 
                 </button>
